--- a/speakers/css/context.css
+++ b/speakers/css/context.css
@@ -1,4 +1,4 @@
-#speakers { padding-top:159px; background:url('../img/bgr-speaker.jpg') repeat-x; }
+#speakers { padding-top:159px; background:url('../img/bgr-speaker.jpg') repeat-x; }		
 #speakers .speakers-wrapper { top:-101px; height:300px; }
 #speakers .burst { position:absolute; left:-251px; top:-128px; width:1528px; height:582px; background:url('../img/bg-speakers.jpg') center center no-repeat; }
 #speakers .speakers-wrapper .speaker { position:absolute; left:-21px; margin:0; width:431px; height:433px; z-index:5; }
@@ -8,6 +8,8 @@
 .robert #speakers .speakers-wrapper .speaker { background:url('../img/robert.png') no-repeat; }
 .angus #speakers .speakers-wrapper .speaker { top:16px; background:url('../img/angus.png') no-repeat; }
 .thibault #speakers .speakers-wrapper .speaker { left:-20px; top:10px; background:url('../img/thibault.png') no-repeat; }
+.caridy #speakers .speakers-wrapper .speaker { left:-20px; top:-5px; background:url('../img/caridy.png') no-repeat; }
+.renato #speakers .speakers-wrapper .speaker { left:-20px; top:-5px; background:url('../img/renato.png') no-repeat; }
 #speakers .speakers-wrapper .ballons { position:relative; top:-24px; left:270px; width:224px; height:212px; background:url('../img/ballons.png') no-repeat; }
 #speakers .speakers-wrapper .ballons .calling { position:absolute; font-size:16px; color:#FFF; width:127px; font-family:"Comic Sans MS", 'arial'; text-transform:uppercase; text-align:center; -webkit-transform:rotate(-22deg); -moz-transform:rotate(-22deg); -o-transform:rotate(-22deg); -ms-transform:rotate(-22deg); transform:rotate(-22deg); }
 #speakers .speakers-wrapper .ballons .calling.what { left:5px; top:22px; }
@@ -44,7 +46,38 @@
 
 @media (min-width: 0) and (max-width: 500px) {
 
-	#speakers .speakers-wrapper { width:1000px; }
-	#speakers .cities { position:absolute; display:inline; height:278px; background: url("../../img/bg-header.png") repeat-x center center; }
+	#speakers { overflow:visible; padding-top:82px; margin-bottom:100px; }
+	#speakers .speakers-wrapper { width:350px; height:66px; background:none; }
+	#speakers .burst { position:static; display:block; width:482px; height:92px; background:url('../img/mobile/bg-thunder.png') center center no-repeat; }
+	#speakers .speakers-wrapper .speaker { left:-5px; top:36px; width:200px; height:310px; z-index:6; }
+	.douglas  #speakers .speakers-wrapper .speaker { left:-4px; top:51px; background:url('../img/mobile/douglas.png') no-repeat; }
+	.robert #speakers .speakers-wrapper .speaker { left:-2px; top:40px; background:url('../img/mobile/robert.png') no-repeat; }
+	.thibault #speakers .speakers-wrapper .speaker { left:-48px; top:48px; width:238px; background:url('../img/mobile/thibault.png') no-repeat; }
+	.stoyan  #speakers .speakers-wrapper .speaker { left:-29px; top:58px; background:url('../img/mobile/stoyan.png') no-repeat; }
+	.angus  #speakers .speakers-wrapper .speaker { left:-3px; top:79px; background:url('../img/mobile/angus.png') no-repeat; }
+	.marcel  #speakers .speakers-wrapper .speaker { left:-3px; top:79px; background:url('../img/mobile/marcel.png') no-repeat; }
+	.caridy  #speakers .speakers-wrapper .speaker { left:-2px; top:34px; background:url('../img/mobile/caridy.png') no-repeat; }
+	.renato  #speakers .speakers-wrapper .speaker { left:-7px; top:50px; width:212px; background:url('../img/mobile/renato.png') no-repeat; }
+	#speakers .speakers-wrapper .logo { float:none; display:block; left:128px; top:-109px; width:178px; height:82px; background:url('../img/mobile/logo.png') no-repeat; }
+	#speakers .speakers-wrapper .ballons { left:197px; top:147px; height:81px; width:97px; background:url('../img/mobile/ttl-general.png') no-repeat; }
+	#speakers .speakers-wrapper .ballons .calling.what { display:none; }
+	#speakers .speakers-wrapper .ballons .calling.where { display:none; }	
+
+	.speaker-info { margin:auto; padding:0 15px; width:320px; }
+	.speaker-info .info-container { margin-bottom:20px; }
+	.speaker-info .info-container .name { font-size:26px; line-height:26px; }
+	.speaker-info .info-container .company { font-size:16px; line-height:16px; }
+	.speaker-info #social-networks { float:left; left:-115px; margin-bottom:20px; padding:43px 150px; width:550px; height:182px; background-color:#161414; }
+	.speaker-info #social-networks .like-it { bottom:29px; left:127px; width:90px; height:61px; background:url('../img/mobile/ico-general.png') no-repeat; }
+	.speaker-info .description { width:285px; font-size:14px; }
+	.speaker-info .my-social-links { margin-bottom:50px; }
+	.speaker-info .home-container { margin-bottom:45px; width:255px; }
+	.speaker-info .home-container .home { width:207px; height:52px; background:url('../img/mobile/ttl-general.png') -7px -83px no-repeat; }
+
+	.footer-container { height:53px; }
+	.footer-container .cities,
+	.footer-container .gradient { display:none; }
+	.footer-container .debug { width:300px;}
+	.footer-container .debug .coins { display:block; margin-left:75px; }
 
 }
