--- a/css/main.css
+++ b/css/main.css
@@ -154,7 +154,9 @@ body { background-color:#201C1D; }
 /* SPEAKERS */
 #speakers { width:100%; position:relative; background-color:#D3D3D1; overflow:hidden; background-image: -webkit-linear-gradient(bottom, rgb(220,222,217) 15%, rgb(209,209,204) 66%); background-image:-moz-linear-gradient(50% 0% -90deg,rgb(207,208,205) 0%,rgba(207,208,205,0) 25%); background-image: -o-linear-gradient(bottom, rgb(220,222,217) 15%, rgb(209,209,204) 66%); background-image: -ms-linear-gradient(bottom, rgb(220,222,217) 15%, rgb(209,209,204) 66%); background-image:linear-gradient(bottom, rgb(220,222,217) 15%, rgb(209,209,204) 66%); }
 #speakers .speakers-wrapper { position:relative; margin:auto; height:605px; width:1000px; }
-#speakers .speakers-wrapper .shadows { position:absolute; left:-176px; width:1333px; height:590px; background:url('../img/shadows.jpg') no-repeat center center; }
+#speakers .speakers-wrapper .shadows { position:absolute; left:-176px; width:1333px; height:590px; }
+#speakers .speakers-wrapper .shadows.theater-version { background:url('../img/shadows.jpg') no-repeat center center; }
+#speakers .speakers-wrapper .shadows.directors-cut { background:url('../img/shadows-directors-cut.jpg') no-repeat center center; }
 #speakers .cities { position:absolute; bottom:-71px; height:278px; width:100%; background:url('../img/bg-header.png') repeat-x center center; z-index:2; }
 
 /* HEADER */
@@ -195,10 +197,12 @@ main .where { float:left; width:432px; font-size:28px; font-weight:bold; letter-
 #heroes .heroes-list .photo { position:absolute; display:block; z-index:3; }
 #heroes .heroes-list .angle { position:absolute; left:18px; width:620px; height:86px; background:url('../img/bg-angle.png') no-repeat; z-index:3; }
 #heroes .heroes-list .douglas-crockford { margin-right:20px; width:620px; height:347px; } 
+#heroes .heroes-list .douglas-crockford .spikes { top:-3px; height:349px; width:620px; background:url('../img/douglas-spikes.png') no-repeat; }
 #heroes .heroes-list .douglas-crockford .hero-name { font-size:40px; }
 #heroes .heroes-list .douglas-crockford .photo { right:0; top:-24px; width:327px; height:371px; background:url('../img/hero-douglas.png') no-repeat; z-index:5; }
-#heroes .heroes-list .AB { margin-top:154px; width:300px; height:533px; background:url('../img/hero-ab.jpg') no-repeat; }
-#heroes .heroes-list .AB .spikes { width:300px; }
+#heroes .heroes-list .alexandre-gaigalas { margin-top:154px; width:300px; height:533px; }
+#heroes .heroes-list .alexandre-gaigalas .spikes { height:533px; width:300px; background:url('../img/wide-spikes.png') no-repeat; }
+#heroes .heroes-list .alexandre-gaigalas .photo { top:3px; left:61px; width:239px; height:530px; background:url('../img/hero-alexandre.png') no-repeat; }
 #heroes .heroes-list .AB .specialguest.photo { right:0; bottom:0; width:300px; height:533px; background:url('../img/hero-betao.png') no-repeat; }
 #heroes .heroes-list .LV { margin:-316px 20px 0 0; width:300px; height:317px; background:url('../img/hero-lv.jpg') no-repeat; }
 #heroes .heroes-list .thibault-imbert { margin-top:-316px; width:300px; height:317px; }
@@ -266,6 +270,8 @@ main .where { float:left; width:432px; font-size:28px; font-weight:bold; letter-
 #heroes-overlay .speaker .social-networks li a.blog { background-position:-119px -461px; }
 #heroes-overlay .photo { position:absolute; opacity:0; left:7px; top:62px; display:block; width:265px; height:412px; background:url('../img/overlay-caridy.png') no-repeat; }
 #heroes-overlay #renato .photo { left:-9px; top:31px; width:315px; height:422px; background:url('../img/overlay-renato.png') no-repeat; }
+#heroes-overlay #alexandre .photo { left:9px; top:31px; width:315px; height:422px; background:url('../img/overlay-alexandre.png') no-repeat; }
+#heroes-overlay #alexandre .photo:before { left:-69px; }
 #heroes-overlay #stoyan .photo { left:-29px; top:47px; width:284px; height:398px; background:url('../img/overlay-stoyan.png') no-repeat; }
 #heroes-overlay #stoyan .photo:before { left:-31px; }
 #heroes-overlay #thibault .photo { left:-59px; top:40px; width:319px; height:412px; background:url('../img/overlay-thibault.png') no-repeat; }
@@ -326,9 +332,9 @@ main .where { float:left; width:432px; font-size:28px; font-weight:bold; letter-
 #tickets .tickets-wrapper .burst { position:absolute; top:-73px; left:-15px; display:block; width:1174px; height:397px; background:url('../img/bg-tickets.png') no-repeat; }
 #tickets .tickets-wrapper .ballons { position:absolute; top:1px; left:18px; display:block; width:180px; height:140px; background:url('../img/ballons.png') no-repeat; }
 #tickets .tickets-wrapper .pigies { /*transition:all 1s ease;*/  position:absolute; top:0; right:0; display:block; width:159px; height:134px; background:url('../img/piggie.png') no-repeat; -webkit-animation:piggies .6s infinite steps(4,end); -moz-animation:piggies .6s infinite steps(4,end); -ms-animation:piggies .6s infinite steps(4,end); -o-animation:piggies .6s infinite steps(4,end); animation:piggies .6s infinite steps(4,end); } 
-#tickets .tickets-wrapper .pigies.pig-1 { right:-106px; top:84px; -moz-animation-delay:0.5s; }
-#tickets .tickets-wrapper .pigies.pig-2 { right:-130px; top:178px; -moz-animation-delay:0.7s; z-index:5; }
-#tickets .tickets-wrapper .pigies.pig-3 { right:-3px; top:140px;  -moz-animation-delay:0.9s; }
+#tickets .tickets-wrapper .pigies.pig-1 { right:-106px; top:84px; -webkit-animation-delay:0.5s; -moz-animation-delay:0.5s; -ms-animation-delay:0.5s; -o-animation-delay:0.5s; animation-delay:0.5s; }
+#tickets .tickets-wrapper .pigies.pig-2 { right:-130px; top:178px; -webkit-animation-delay:0.7s; -moz-animation-delay:0.7s; -ms-animation-delay:0.7s; -o-animation-delay:0.7s; animation-delay:0.7s; z-index:5; }
+#tickets .tickets-wrapper .pigies.pig-3 { right:-3px; top:140px; -webkit-animation-delay:0.9s; -moz-animation-delay:0.9s; -ms-animation-delay:0.9s; -o-animation-delay:0.9s; animation-delay:0.9s; }
 #tickets .tickets-wrapper .buy { position:relative; display:inline-block; width:539px; height:102px; background-color:rgb(64,68,91); background-image:-moz-linear-gradient(rgba(0,0,0,0) 0%,rgba(0,0,0,0.5) 100%); background-image:-webkit-gradient(linear,color-stop(0, rgba(0,0,0,0)),color-stop(1, rgba(0,0,0,0.5))); background-image:-webkit-linear-gradient(rgba(0,0,0,0) 0%,rgba(0,0,0,0.5) 100%); background-image:-ms-linear-gradient(rgba(0,0,0,0) 0%,rgba(0,0,0,0.5) 100%); background-image:linear-gradient(rgba(0,0,0,0) 0%,rgba(0,0,0,0.5) 100%); -ms-filter:"progid:DXImageTransform.Microsoft.gradient(startColorstr=#0000000,endColorstr=#7f000000)"; filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#0000000,endColorstr=#7f000000); z-index:2; } 
 #tickets .tickets-wrapper .buy strong { display:inline-block; margin:30px 0 0 51px; width:425px; height:58px; background-position:0 -651px; } 
 #tickets .tickets-wrapper .corner-shadow { position:relative; bottom:19px; left:397px; display:block; width:548px; height:26px; background:url('../img/buyShadow.png') no-repeat; z-index:1; }
@@ -455,7 +461,7 @@ main .where { float:left; width:432px; font-size:28px; font-weight:bold; letter-
 	#heroes .heroes-list .marcel-angus .hero-name { width:146px; }
 	#heroes .heroes-list .hero-company { font-size:14px !important; color:rgb(121,121,121); text-shadow:none; font-weight:normal; font-style:italic; }
 	#heroes .heroes-list .douglas-crockford .photo { top:-4px; width:106px; height:156px; background:url('../img/mobile/douglas-small.png') no-repeat; }
-	#heroes .heroes-list .AB { background:url('../img/mobile/ab-small.png') no-repeat; }
+	#heroes .heroes-list .alexandre-gaigalas .photo { top:1px; left:11px; height:152px; width:134px; background:url('../img/mobile/alexandre-small.png') no-repeat; }
 	#heroes .heroes-list .LV { background:url('../img/mobile/lv-small.png') no-repeat; }
 	#heroes .heroes-list .JG { background:url('../img/mobile/jg-small.png') no-repeat; }
 	#heroes .heroes-list .PI { background:url('../img/mobile/pi-small.png') no-repeat; }
@@ -506,7 +512,8 @@ main .where { float:left; width:432px; font-size:28px; font-weight:bold; letter-
 	#heroes-overlay #stoyan .photo { top:20px; left:-30px; width:203px; height:285px; background:url('../img/mobile/hero-stoyan.png') no-repeat; }	
 	#heroes-overlay #caridy .photo { left:0; width:199px; height:317px; background:url('../img/mobile/hero-caridy.png') no-repeat; }
 	#heroes-overlay #angus-marcel .photo { left:0; width:286px; height:211px; background:url('../img/mobile/hero-angus-marcel.png') no-repeat; }	
-	#heroes-overlay #renato .photo { top:21px; left:0; width:199px; height:317px; background:url('../img/mobile/hero-renato.png') no-repeat; }	
+	#heroes-overlay #renato .photo { top:21px; left:0; width:199px; height:317px; background:url('../img/mobile/hero-renato.png') no-repeat; }
+	#heroes-overlay #alexandre .photo { top:36px; left:0; width:230px; height:296px; background:url('../img/mobile/hero-alexandre.png') no-repeat; }	
 	#heroes-overlay .close { right:5px; top:281px; height:32px; width:73px; background-position:0 -270px; z-index:10; }
 	#heroes-overlay #angus-marcel .speaker .name { width:360px; }	
 	
@@ -627,10 +634,12 @@ main .where { float:left; width:432px; font-size:28px; font-weight:bold; letter-
 	#heroes .heroes-list .hero-name { font-size:22px; }
 	#heroes .heroes-list .hero-company { font-size:18px; }
 	#heroes .heroes-list .douglas-crockford { width:479px; height:289px; }
-	#heroes .heroes-list .douglas-crockford .spikes { top:20px; height:267px; }
+	#heroes .heroes-list .douglas-crockford .spikes { top:18px; width:480px; height:270px; background:url('../img/tablet/douglas-spikes.png') no-repeat; }
 	#heroes .heroes-list .douglas-crockford .hero-name { font-size:40px; }
 	#heroes .heroes-list .douglas-crockford .photo { top:1px; width:253px; height:288px; background:url('../img/tablet/hero-douglas.png') no-repeat; }
-	#heroes .heroes-list .AB { margin-top:138px; width:229px; height:410px; background:url('../img/tablet/hero-AB.jpg') no-repeat; }
+	#heroes .heroes-list .alexandre-gaigalas { margin-top:138px; width:229px; height:410px; }
+	#heroes .heroes-list .alexandre-gaigalas .spikes { width:230px; height:410px; background:url('../img/tablet/wide-spikes.png') no-repeat; }
+	#heroes .heroes-list .alexandre-gaigalas .photo { left:45px; top:0; width:185px; height:410px; background:url('../img/tablet/hero-alexandre.png') no-repeat; }
 	#heroes .heroes-list .LV { margin-top:-240px; width:229px; height:241px; background:url('../img/tablet/hero-LV.jpg') no-repeat; }
 	#heroes .heroes-list .thibault-imbert { margin-top:-241px; width:229px; height:241px; }
 	#heroes .heroes-list .thibault-imbert .hero-name { font-size:22px; }
@@ -669,7 +678,8 @@ main .where { float:left; width:432px; font-size:28px; font-weight:bold; letter-
     #heroes-overlay .photo:after { content:none; }
     #heroes-overlay .sequence-canvas { margin:auto; width:768px; }
     #heroes-overlay .speaker .info { padding:0 0 0 20px; }
-    #heroes-overlay .speaker .information { width:666px; padding:0; }
+    #heroes-overlay .speaker .information { width:666px; padding:0; background-color:transparent; }
+    #heroes-overlay .speaker .information .spacer { display:none; }
     #heroes-overlay .speaker .social-networks { padding-left:20px; }
     #heroes-overlay .portrait .share { top:320px; right:-327px; margin:-104px 0 0 -109px; }
     #heroes-overlay .speaker .social-networks li a.github { background-position:0 -316px; }
@@ -684,6 +694,7 @@ main .where { float:left; width:432px; font-size:28px; font-weight:bold; letter-
 	#heroes-overlay #robert .photo { top:0; left:-69px; }
 	#heroes-overlay #renato .photo { left:-79px; top:1px; height:391px; }
 	#heroes-overlay #thibault .photo { top:0; left:-80px; width:319px; height:390px; background:url('../img/overlay-thibault.png') no-repeat; }
+	#heroes-overlay #alexandre .photo { left:-61px; top:1px; }
 	
 	/* SCHEDULE */
 	#schedule { margin-top:100px; }
